--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <h1>Ram's To Do List</h1>
     <p>Enter an item in text box below and click the "Add Item" button to add it to the list below.</p>
-    <input type="text" class="addItem" value="Item A">
+    <input type="text" class="addItemInput" value="Item A">
     <button class="addItemButton">Add Item To List</button>
     <div class='list'>
         <p>Today's list of tasks are outlined below:</p>
         <ul>
-            <li> <input type="text" class="listItem" value="Item 1"></li>
-            <li> <input type="text" class="listItem" value="Item 2"></li>
-            <li> <input type="text" class="listItem" value="Item 3"></li>
-            <li> <input type="text" class="listItem" value="Item 4"></li>
+            <li> <input type="text" class="listItem" value="Item 1"><button class="saveButton">Save</button><button class="deleteButton">Delete</button></li>
+            <li> <input type="text" class="listItem" value="Item 2"><button class="saveButton">Save</button><button class="deleteButton">Delete</button></li>
+            <li> <input type="text" class="listItem" value="Item 3"><button class="saveButton">Save</button><button class="deleteButton">Delete</button></li>
+            <li> <input type="text" class="listItem" value="Item 4"><button class="saveButton">Save</button><button class="deleteButton">Delete</button></li>
         </ul>
     </div>
     <script src="/Users/eramsay/Desktop/Github Files/todolist/todolist.js"></script>
