Completed functionality to add list items (including save & delete button)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <div class='list'>
         <p>Today's list of tasks are outlined below:</p>
         <ul>
-            <li> <input type="text" class="listItem" value="Item 1"><button class="saveButton">Save</button><button class="deleteButton">Delete</button></li>
+            <li> 
+                <input type="text" class="listItem" value="Item 1">
+                <button class="saveButton">Save</button>
+                <button class="deleteButton">Delete</button>
+            </li>
             <li> <input type="text" class="listItem" value="Item 2"><button class="saveButton">Save</button><button class="deleteButton">Delete</button></li>
             <li> <input type="text" class="listItem" value="Item 3"><button class="saveButton">Save</button><button class="deleteButton">Delete</button></li>
             <li> <input type="text" class="listItem" value="Item 4"><button class="saveButton">Save</button><button class="deleteButton">Delete</button></li>
