completed basic requirements

--- a/index.html
+++ b/index.html
@@ -11,14 +11,11 @@
     <p>Enter an item in text box below and click the "Add Item" button to add it to the list below.</p>
     <input type="text" class="addItemInput" value="Item A">
     <button class="addItemButton">Add Item To List</button>
-    <div class='list'>
+    <button class="removeLastButton">Remove Last Item</button>
+    <div class='listDiv'>
         <p>Today's list of tasks are outlined below:</p>
         <ul>
-            <li> 
-                <input type="text" class="listItem" value="Item 1">
-                <button class="saveButton">Save</button>
-                <button class="deleteButton">Delete</button>
-            </li>
+            <li><input type="text" class="listItem" value="Item 1"><button class="saveButton">Save</button><button class="deleteButton">Delete</button></li>
             <li> <input type="text" class="listItem" value="Item 2"><button class="saveButton">Save</button><button class="deleteButton">Delete</button></li>
             <li> <input type="text" class="listItem" value="Item 3"><button class="saveButton">Save</button><button class="deleteButton">Delete</button></li>
             <li> <input type="text" class="listItem" value="Item 4"><button class="saveButton">Save</button><button class="deleteButton">Delete</button></li>
