--- a/index.html
+++ b/index.html
@@ -10,15 +10,22 @@
     <h1>Ram's To Do List</h1>
     <p>Enter an item in text box below and click the "Add Item" button to add it to the list below.</p>
     <input type="text" class="addItemInput" value="Item A">
+    <input type="text" class="addItemDescript" value="Item A Description">
+    <input type="date" class="dueDateSelector" value='1992-07-11'>
     <button class="addItemButton">Add Item To List</button>
-    <button class="removeLastButton">Remove Last Item</button>
+    <button class="hideAll">Select All List Items</button>
+    <!-- <button class="removeLastButton">Remove Last Item</button> -->
     <div class='listDiv'>
         <p>Today's list of tasks are outlined below:</p>
         <ul>
-            <li><input type="text" class="listItem" value="Item 1"><button class="saveButton">Save</button><button class="deleteButton">Delete</button></li>
-            <li> <input type="text" class="listItem" value="Item 2"><button class="saveButton">Save</button><button class="deleteButton">Delete</button></li>
-            <li> <input type="text" class="listItem" value="Item 3"><button class="saveButton">Save</button><button class="deleteButton">Delete</button></li>
-            <li> <input type="text" class="listItem" value="Item 4"><button class="saveButton">Save</button><button class="deleteButton">Delete</button></li>
+            <li>
+                <input type="date" class="dueDate" value='1992-07-12'>
+                <input type="text" class="listItem" value="Item 1">
+                <button class="saveButton">Save</button>
+                <button class="deleteButton">Delete</button>
+            </li>
+            <li class = "descriptLi">Description 1</li>
+           
         </ul>
     </div>
     <script src="/Users/eramsay/Desktop/Github Files/todolist/todolist.js"></script>
