--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input type="text" class="addItemDescript" value="Item A Description">
     <input type="date" class="dueDateSelector" value='1992-07-11'>
     <button class="addItemButton">Add Item To List</button>
-    <button class="hideAll">Select All List Items</button>
+    <button class="selectAll">Select All List Items</button>
     <!-- <button class="removeLastButton">Remove Last Item</button> -->
     <div class='listDiv'>
         <p>Today's list of tasks are outlined below:</p>
